# MultimediaSpider

./: .gitignore  .pdm-python  Pipfile  README.md  async_db.py  db.py  docker-compose.yaml  main.py  pyproject.toml  redis.py  requirements.txt  server.py  var.py
account_pool/: __init__.py  accounts_cookies.xlsx  field.py  pool.py  xhs_account.xlsx
api/: __init__.py  account.py  auth.py  comments.py  keywords.py  task.py
api/keywords/: keywords.py  search_task.py  xhs_comments.py  xhs_notes.py
api/theme/: theme.py  xhs.py
base/: base_crawler.py
cache/: abs_cache.py  local_cache.py  redis_cache.py
cmd_arg/: arg.py
config/: README.md  __init__.py  accounts_cookies.xlsx  base_config.py  db_config.py  proxy_config.py
constant/: baidu_tieba.py  base_constant.py  bilibili.py  douyin.py  weibo.py  xiaohongshu.py
helpers/: authenticated.py  celery.py  logto.py  mode.py  nocodb.py  queue.py  redis.py  request.py  sanic.py
management/proxies/: check_proxy.py  proxy.py
media_platform/bilibili/: client.py  core.py  login.py
media_platform/douyin/: client.py  core.py  help.py
media_platform/kuaishou/: __init__.py  client.py  core.py
mock/xhs/: comment.js  (+3 more)
model/: m_baidu_tieba.py  m_xiaohongshu.py
models/: __init__.py  cookies.py  cursor.py  keywords.py  sessions.py  tasks.py  user_comments.py  user_keyword.py  users.py
pkg/: async_http_client.py
proxy/: base_proxy.py  proxy_ip_pool.py  types.py
schema/: tables.sql
test/: test_expiring_local_cache.py  test_proxy_ip_pool.py  test_redis_cache.py  test_utils.py
tools/: crawler_util.py  words.py
(+60 files in other folders)
